CHANGES for LIRE
================

2013-04-11
==========
  - Added method to BitSampling
  - Removed printStackTrace from Extractor

2013-04-08
==========
  - Added security check to BitSampling.generateHashes not to overwrite hash file on disk.
  - Added additional error message to Indexor.
  - Changed signature of SimpleImageSearchHits to support a simple web app.

2013-04-06
==========
  - Fixed bug with transparency channel in PHOG.

2013-04-06
==========
  - Extended buffer size in Indexor.
  - Added levels to PHOG, reduced serialization size.
  - Introduced LuminanceLayout feature.
  - Tuned PHOG, it now exceeds EdgeHistogram on the Wang 1000 SIMPLIcity data set.
  - Added LuminanceLayout and PHOG to DocumentBuilderFactory, ImageSearcherFactory, Extractor and LireDemo
  - Added option to Extractor that out file is generated by itself

2013-04-05
==========
  - Added Canny Edge Detector
  - Added PHOG descriptor in a simple, 1-level version.

2013-04-04
==========
  - Added a method to check if an image file can be opened by Java.

2013-03-26
==========
  - Added new method to abstract SearchHitsFilter class
  - Added TestRerankTextSearch.java
  - Added functions to FileUtils.java

2013-03-12
==========
  - Moved hashing to sub package of indexing
  - Moved Extractor and Indexor to tool package (in indexing)
  - Renamed HashingUtils to BitSampling, which is the name of the method employed.
  - Added HashingIndexor extending Indexor. It does bit sampling based hashing on the CEDD feature.
  - Tested BitSampling on OpponentHistogram and found it working.

2013-03-12
==========
  - Worked on HashingUtils to configure it for use with CEDD & tested it.
  - Added some utility methods.

2013-03-12
==========
  - Created Indexor & Extractor, an intermediate step for distributed indexing.
  - Tested it, seems to work on byte[] level.
  - Updated to Lucene 4.2
  - Updated to Commons Math 3.1.1
  - Removed deprecated calls from GenericDocumentBuilder

2013-03-08